# opentelemetry-python-contrib

./: .codespellignore  .codespellrc  README.md
instrumentation-genai/: README.md
instrumentation-genai/opentelemetry-instrumentation-langchain/: MIGRATION_GUIDE.md  README.rst  pyproject.toml  pytest.ini
instrumentation-genai/opentelemetry-instrumentation-langchain/examples/manual/: README.rst  main.py  requirements.txt
instrumentation-genai/opentelemetry-instrumentation-langchain/examples/zero-code/: README.rst  app.py  app_flask.py  main.py  requirements.txt
instrumentation-genai/opentelemetry-instrumentation-langchain/tests/: conftest.py  test_chains.py  test_chat_model.py  test_llm.py  test_metrics.py
instrumentation-genai/opentelemetry-instrumentation-ollama/: README.rst  pyproject.toml
instrumentation-genai/opentelemetry-instrumentation-ollama/examples/manual/: README.rst  main.py  requirements.txt
instrumentation-genai/opentelemetry-instrumentation-ollama/examples/zero-code/: README.rst  app.py  main.py  main_flask.py  requirements.txt
instrumentation-genai/opentelemetry-instrumentation-ollama/src/opentelemetry/instrumentation/ollama/: __init__.py  config.py  instrumentation.py  utils.py
instrumentation-genai/opentelemetry-instrumentation-ollama/tests/: README.rst  conftest.py  test_generation.py
instrumentation-genai/opentelemetry-instrumentation-ollama/tests/cassettes/: test_ollama_generation.yaml
instrumentation-genai/opentelemetry-instrumentation-openai-v2/examples/zero-code/: main.py
opentelemetry-distro/: pyproject.toml
(+6 files in other folders)
