[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tapm-instrumentation-ollama"
dynamic = ["version"]
description = "OpenTelemetry Official Ollama instrumentation"
readme = "README.rst"
license = "Apache-2.0"
requires-python = ">=3.8"
dependencies = [
  "opentelemetry-api ~= 1.30",
  "opentelemetry-instrumentation ~= 0.51b0",
  "opentelemetry-semantic-conventions ~= 0.51b0",
]

[project.optional-dependencies]
instruments = ["ollama>=0.2.0,<1"]

[project.entry-points.opentelemetry_instrumentor]
ollama = "opentelemetry.instrumentation.ollama:OllamaInstrumentor"

[tool.hatch.version]
path = "src/opentelemetry/instrumentation/ollama/version.py"

[tool.hatch.build.targets.sdist]
include = ["/src", "/tests"]

[tool.hatch.build.targets.wheel]
packages = ["src/opentelemetry"] 